feat: upgrade deps and plugs.